2014-04-16 Lubos Dolezel <lubos@dolezel.info>
	* Source/CFRunLoop.c,
	  Source/CFRuntime.c: Work on CFRunLoop

2014-02-19 Stefan Bidigaray <stefanbidi@gmail.com>
	* configure,
	* configure.ac: Use autoconf's built-in functions and introduce
	function to check the architecture's data model.
	* Headers/CoreFoundation/CFBase.h,
	* Headers/CoreFoundation/CFBase.h.in: Used data model information.
	* Source/CFLocale.c: Use CF defined type (UInt32).

2014-02-03 Lubos Dolezel <lubos@dolezel.info>
	* Source/CFStream.c: Initial CFReadStream implementation, generalization
	* Tests/CFStream/write.m: Tests for CFWriteStream
	* Tests/CFStream/read.m: Test for CFReadStream
	* Source/NSCFInputStream.m,
	* Source/NSCFOutputStream.m: TFB for CFRead/WriteStream
	* Source/CFError.c: Prevent crash on NULL user dictionary

2014-02-02 Lubos Dolezel <lubos@dolezel.info>
	* Source/CFStream.c: Initial CFWriteStream implementation

2014-01-14 Lubos Dolezel <lubos@dolezel.info>
	* Source/NSBundle.m: Add CFBundleCopyResourcesDirectoryURL

2013-08-11 Lubos Dolezel <lubos@dolezel.info>
	* Source/GSMemory.h: Introduce wrappers for platform-dependent
	memory functions.
	* Source/GSUnicode.c,
	* Source/GSUnicode.h: Add printf-type functions. Not currently used.

2013-08-11 Lubos Dolezel <lubos@dolezel.info>
	* Source/CFBundle.m: Added CFBundleCopyPrivateFrameworksURL and
	CFBundleCopyAuxiliaryExecutableURL
	* Tests/CFLocale/bridge.m: Added the other half of tests, courtesy of
	mahimahi42

2013-08-11 Lubos Dolezel <lubos@dolezel.info>

	* Tests/CFString/objc_bridge_from_cf.m: mark -getBytes* tests as hopeful
	* Source/CFBundle.m: CFBundle as a proper CF type

2013-08-10 Lubos Dolezel <lubos@dolezel.info>

	* Source/CFStringEncoding.c: Fixed a crash in
	CFStringGetListOfAvailableEncodings()
	* Source/CFBundle.m: added many (but not all) CFBundle functions

2013-08-08 Lubos Dolezel <lubos@dolezel.info>

	* Source/CFString.c: TFB support in CFStringTransform
