@@ -1,3 +1,7 @@
+2014-04-18 Lubos Dolezel <lubos@dolezel.info>
+	* Source/CFRunLoop.c,
+	  Tests/CFRunLoop/source.m: CFRunLoop impl that passes the test
+
 2014-04-16 Lubos Dolezel <lubos@dolezel.info>
 	* Source/CFRunLoop.c,
 	  Source/CFRuntime.c: Work on CFRunLoop
